# OpensourceClassicCommentary

./: .gitignore  .readthedocs.yaml  README.md  angular.json  deploy.sh  deploy_angular.sh  deploy_flask.sh  docker-compose.yml  oscc_tmux.sh  package-lock.json  package.json  project_overview.odp  swagger.io  tmux.sh  todo.txt  todo_list.txt
Angular/: README.md  (+7 more)
flask/: .gitignore  Dockerfile  README.md  config.py  constants.py  couch.py  database.py  mixins.py  pyproject.toml  requirements.txt  restore_backup.py  run_server.sh  server.py  utilities.py  wsgi.py
flask/bak/: bibliography_handling.py  fragment_handling.py  introduction.py  introduction_model.py  move.py  user_handling.py
flask/bak/bibliography/: bib_entry.py  bibliography_handling.py  readme.md
flask/cache/: list_display.json  zotero.json
flask/common/: couch.py  database.py  hashing.py  utilities.py
flask/endpoints/: broader_context.py  document.py  fragment.py  introduction.py  new_user.py  playground.py  testimonium.py  text.py  user.py  zotero.py
flask/migrations/: context_commentary.py  document_type.py  linked_fragment_sandbox.py  publish.py  sandbox.py
flask/models/: broader_context.py  document.py  fragment.py  introduction.py  playground.py  testimonium.py  text.py  user.py  zotero.py
flask/tests/: users_test.py
social_media/: .gitignore  README.md  bluesky.py  fragment_picker.py  main.py  mastadon.py  pyproject.toml  requirements.txt  tumblr.py  tweet.sh  utilities.py
social_media/sample_dump/: documents-2025_05_19.json
social_media/socials/: bluesky.py  mastadon.py  tumblr.py
(+687 files in other folders)
