[project]
name = "flask-api"
version = "0.1.0"
description = "The Flask API that handles communication between angular and couchdb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "couchdb>=1.2",
    "flasgger>=0.9.7.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jsonpify>=1.5.0",
    "flask-restful>=0.3.10",
    "fuzzywuzzy>=0.18.0",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "pyzotero>=1.11.0",
    "ruff>=0.15.10",
]
